--- a/lab/docker-compose.yml
+++ b/lab/docker-compose.yml
@@ -10,7 +10,8 @@ services:
         ipv4_address: 172.16.10.13
       corporate:
         ipv4_address: 10.1.0.12
-  
+      host-network:
+        ipv4_address: 10.10.10.15  
   c-backup-01:
     container_name: c-backup-01
     hostname: c-backup-01.acme-infinity-servers.com
@@ -42,6 +43,8 @@ services:
     networks:
       public:
         ipv4_address: 172.16.10.11
+      host-network:
+        ipv4_address: 10.10.10.13
   
   p-web-01:
     container_name: p-web-01
@@ -53,6 +56,8 @@ services:
     networks:
       public:
         ipv4_address: 172.16.10.10
+      host-network: 
+        ipv4_address: 10.10.10.12
     volumes:
       - shared_vol:/mnt/scripts/
   
@@ -70,6 +75,8 @@ services:
         ipv4_address: 172.16.10.12
       corporate:
         ipv4_address: 10.1.0.11
+      host-network:
+        ipv4_address: 10.10.10.14
     depends_on:
       - c-db-02
   
@@ -122,3 +129,12 @@ networks:
     ipam:
       config:
         - subnet: "10.1.0.0/24"
+
+## create host network on 10.10.10.0/24
+  host-network:
+    driver: bridge
+    ipam:
+      config: 
+        - subnet: "10.10.10.0/24"
+
+
